--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
-    "slush": ">=1.0.0",
     "gulp": "^3.6.2",
-    "gulp-template": "^0.1.1",
-    "gulp-install": "^0.1.4",
     "gulp-conflict": "^0.1.1",
-    "gulp-rename": "^1.2.0",
     "gulp-insert": "^0.5.0",
+    "gulp-install": "^0.1.4",
+    "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
-    "underscore.string": "^2.3.3",
-    "inquirer": "^0.8.0",
+    "gulp-strip-line": "0.0.1",
+    "gulp-template": "^0.1.1",
     "iniparser": "^1.0.5",
-
+    "inquirer": "^0.8.0",
+    "slush": ">=1.0.0",
+    "underscore.string": "^2.3.3"
   },
   "keywords": [
     "slushgenerator"
