--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "fs-path": "0.0.22",
     "gulp": "^3.6.2",
     "gulp-conflict": "^0.1.1",
+    "gulp-fn": "0.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-install": "^0.1.4",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
+    "gulp-run": "^1.7.1",
     "gulp-strip-line": "0.0.1",
     "gulp-template": "^0.1.1",
     "iniparser": "^1.0.5",
