--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "iniparser": "^1.0.5",
     "inquirer": "^0.8.0",
     "slush": ">=1.0.0",
+    "underscore": "1.8.3",
     "underscore.string": "^2.3.3"
   },
   "keywords": [
