--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nslush-zee",
+  "name": "slush-zee",
   "description": "A landing page generator",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/bdavidxyz/slush-zee",
   "author": {
     "name": "bdavidxyz",
