--- a/templates/package.json
+++ b/templates/package.json
@@ -23,7 +23,8 @@
     "gulp-replace": "0.5.4",
     "gulp-sass": "2.3.1",
     "gulp-uglify": "1.5.3",
-    "gulp-uncss": "1.0.5"
+    "gulp-uncss": "1.0.5",
+    "slush-zee":"^0.1.1"
   },
   "repository": {
     "type": "git",
