--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "bower-installer": "^1.2.0",
     "fs-path": "0.0.22",
     "gulp": "^3.6.2",
+    "gulp-clean": "0.3.2",
     "gulp-conflict": "0.4.0",
     "gulp-fn": "0.0.0",
+    "gulp-google-webfonts": "0.0.14",
+    "gulp-if": "^2.0.1",
     "gulp-insert": "^0.5.0",
+    "gulp-insert-lines": "0.0.4",
     "gulp-install": "^0.1.4",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
     "gulp-run": "^1.7.1",
-    "gulp-clean": "0.3.2",
     "gulp-strip-line": "0.0.1",
     "gulp-template": "^0.1.1",
     "iniparser": "^1.0.5",
@@ -46,8 +49,6 @@
     "slush": ">=1.0.0",
     "underscore": "1.8.3",
     "underscore.string": "^2.3.3",
-    "gulp-if": "^2.0.1",
-    "gulp-google-webfonts":"0.0.14",
     "yargs": "4.8.1"
   },
   "keywords": [
