--- a/templates/package.json
+++ b/templates/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "add-section": "slush zee:add-section",
     "rm-section": "slush zee:rm-section",
+    "update-theme": "slush zee:update-theme",
     "local": "gulp",
     "deploy": "gulp deploy"
   },
