--- a/templates/_config.prod.yml
+++ b/templates/_config.prod.yml
@@ -4,4 +4,5 @@
 
 
 baseurl: "/<%= appName %>" # the subpath of your site, e.g. /blog
-#google_analytics: "" # example of custom prop you may add : your google analytics ID. You also need to import the JS script to make it work.
+#zee_google_analytics: "" 
+#zee_crisp_im: "" 
