--- a/templates/package.json
+++ b/templates/package.json
@@ -12,7 +12,7 @@
     "add-section": "slush zee:add-section",
     "rm-section": "slush zee:rm-section",
     "update-theme": "slush zee:update-theme",
-    "generate": "echo 'project cannot be generate twice'",
+    "scaffold": "echo 'project cannot be scaffolded twice'",
     "local": "gulp",
     "deploy": "gulp deploy"
   },
