--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slush-zee",
   "description": "A landing page generator",
-  "version": "0.1.33",
+  "version": "0.1.34",
   "homepage": "https://github.com/bdavidxyz/slush-zee",
   "author": {
     "name": "bdavidxyz",
@@ -50,7 +50,8 @@
     "slush": ">=1.0.0",
     "underscore": "1.8.3",
     "underscore.string": "^2.3.3",
-    "yargs": "4.8.1"
+    "yargs": "4.8.1",
+    "fs-extra": "^0.30.0"
   },
   "keywords": [
     "slushgenerator"
